Prevent navbar overlap

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body,
 html {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
   margin: 0 !important;
   padding: 0 !important;
     
